# tinydmarc

./: .gitignore  Cargo.toml  README.md
src/: dmarcreport.rs  main.rs  records.rs
