[package]
name = "tinydmarc"
version = "0.0.1"
authors = ["Andy <github@monkeysplayingpingpong.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2"
log = "0.4"
roxmltree = "0.13"
simple_logger = "1.10"
